JDK25; ByteBuffer->MemorySegment